--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
   <link rel="stylesheet" type="text/css" href="app.css">
-  <body style="margin:0px;">
+</head>
+<body style="margin:0px;">
+  <div id="container">
+  </div>
+  <script
+  src="https://code.jquery.com/jquery-1.7.2.min.js"
+  integrity="sha256-R7aNzoy2gFrVs+pNJ6+SokH04ppcEqJ0yFLkNGoFALQ="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.5.1/svg.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+  <script src="https://soulwire.github.io/sketch.js/js/sketch.min.js"></script>
+  <script type="text/javascript" src="app.js"></script>
+</body>
 
-    <div class="container">
-      <div class="line"></div>
-    </div>
-    <script
-    src="https://code.jquery.com/jquery-1.7.2.min.js"
-    integrity="sha256-R7aNzoy2gFrVs+pNJ6+SokH04ppcEqJ0yFLkNGoFALQ="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.5.1/svg.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
-    <script src="https://soulwire.github.io/sketch.js/js/sketch.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-  </body>
-
-  </html>
-
+</html>
